--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,50 @@
 body {
     display: grid;
+    background-color: black;
+    color: white;
+}
+
+
+@mixin frame($fontSize) {
+    display: grid;
+    position: fixed;
+    left: 0%;
+    height: 75px;
+    width: 100%;
+    background-color: #212121;
+    align-items: center;
+    justify-content: left;
+
+    font-size: $fontSize;
+}
+.header{
+    @include frame(25px);
+    top: 0%;
+}
+.header p{
+    width: 100%;
+    padding-left: 20px;
+}
+
+$button-size: 70px;
+.addButton {
+    background-color: #BFAAE3;
+    width: $button-size;
+    height: $button-size;
+    border-radius: $button-size/2;
+    position: fixed;
+    bottom: 10%;
+    right: 0%;
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    font-size: 30px;
+    font-weight: 600;
+}
+
+footer{
+    @include frame(normal);
+    bottom: 0%;
 }
