--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,11 @@ body {
   height: 100%;
   margin: 0%;
   font-family: "Asap", sans-serif;
+  font-weight: 550;
+  user-zoom: none;
 }
 
-.header {
+header {
   display: grid;
   position: fixed;
   left: 0%;
@@ -18,9 +20,13 @@ body {
   justify-content: left;
   font-size: 25px;
   top: 0%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  box-shadow: 0 3px 10px rgba(24, 24, 24, 0.5);
 }
 
-.header p {
+header p {
   width: 100%;
   padding-left: 20px;
 }
@@ -40,7 +46,13 @@ body {
   color: black;
   font-size: 40px;
   font-family: "Times new roman";
-  box-shadow: 0 5px 20px rgba(24, 24, 24, 0.5);
+  box-shadow: 0 5px 15px rgba(24, 24, 24, 0.5);
+  user-select: none;
+  transition: transform 250ms;
+}
+
+.addButton:active {
+  transform: scale(0.8);
 }
 
 footer {
@@ -55,7 +67,7 @@ footer {
   font-size: normal;
   bottom: 0%;
   background-color: black;
-  border-top: 2px solid #212121;
+  border-top: 1px solid gray;
 }
 
 main {
@@ -73,9 +85,17 @@ main {
   margin: 0%;
   padding: 24px;
   border-radius: 10px;
-  border-top: 9px solid aqua;
+  border-top: 9px solid #CDE9FF;
   margin: 15px;
   margin-bottom: 10px;
+}
+
+.themeChanger {
+  width: 60px;
+  height: 50px;
+  background-color: white;
+  border-radius: 25px;
+  margin-right: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
