--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ body {
   color: white;
   height: 100%;
   margin: 0%;
+  width: 100%;
   font-family: "Asap", sans-serif;
   font-weight: 550;
   user-zoom: none;
@@ -13,7 +14,7 @@ header {
   display: grid;
   position: fixed;
   left: 0%;
-  height: 75px;
+  height: 70px;
   width: 100%;
   background-color: #212121;
   align-items: center;
@@ -33,9 +34,9 @@ header p {
 
 .addButton {
   background-color: #bfaae3;
-  width: 69px;
-  height: 69px;
-  border-radius: 34.5px;
+  width: 59px;
+  height: 59px;
+  border-radius: 29.5px;
   position: fixed;
   bottom: 9%;
   right: 0%;
@@ -59,7 +60,7 @@ footer {
   display: grid;
   position: fixed;
   left: 0%;
-  height: 75px;
+  height: 70px;
   width: 100%;
   background-color: #212121;
   align-items: center;
@@ -73,8 +74,8 @@ footer {
 main {
   display: flex;
   flex-direction: column;
-  margin-top: 79px;
-  margin-bottom: 79px;
+  margin-top: 74px;
+  margin-bottom: 74px;
   height: 100%;
   width: 100%;
   padding-bottom: 100px;
@@ -85,19 +86,35 @@ main {
   margin: 0%;
   padding: 24px;
   border-radius: 10px;
-  border-top: 9px solid #CDE9FF;
+  border-top: 9px solid #cde9ff;
   margin: 15px;
   margin-bottom: 10px;
   box-shadow: 0 1px 3px rgba(53, 53, 53, 0.5);
   word-wrap: break-word;
+  transition: transform 250ms;
 }
 
 .themeChanger {
-  width: 60px;
-  height: 50px;
+  width: 40px;
+  height: 35px;
   background-color: white;
   border-radius: 25px;
   margin-right: 10px;
+}
+
+.valueInput {
+  width: 100%;
+  height: 300px;
+  border-radius: 20px;
+  border-top: 9px solid #cde9ff;
+  background-color: #E1F1FF;
+  position: fixed;
+  top: 100%;
+  transition: transform 0.3s ease-out;
+}
+
+.valueInput:focus {
+  transform: translateY(-190%);
 }
 
 /*# sourceMappingURL=style.css.map */
