--- a/css/style.scss
+++ b/css/style.scss
@@ -1,100 +1,118 @@
 body {
-  display: flex;
-  background-color: black;
-  color: white;
-  height: 100%;
-  margin: 0%;
-  font-family: "Asap", sans-serif;
-  font-weight: 550;
-  user-zoom: none;
+    display: flex;
+    background-color: black;
+    color: white;
+    height: 100%;
+    margin: 0%;
+    width: 100%;
+    font-family: "Asap", sans-serif;
+    font-weight: 550;
+    user-zoom: none;
 }
 
-$frame-size: 75px;
+$frame-size: 70px;
 @mixin frame($fontSize) {
-  display: grid;
-  position: fixed;
-  left: 0%;
-  height: $frame-size;
-  width: 100%;
-  background-color: #212121;
-  align-items: center;
-  justify-content: left;
+    display: grid;
+    position: fixed;
+    left: 0%;
+    height: $frame-size;
+    width: 100%;
+    background-color: #212121;
+    align-items: center;
+    justify-content: left;
 
-  font-size: $fontSize;
+    font-size: $fontSize;
 }
 header {
-  @include frame(25px);
-  top: 0%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  box-shadow: 0 3px 10px rgba(24, 24, 24, 0.5);
+    @include frame(25px);
+    top: 0%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    box-shadow: 0 3px 10px rgba(24, 24, 24, 0.5);
 }
 header p {
-  width: 100%;
-  padding-left: 20px;
+    width: 100%;
+    padding-left: 20px;
 }
 
-$button-size: 69px;
+$button-size: 59px;
 .addButton {
-  background-color: #bfaae3; 
-  width: $button-size;
-  height: $button-size;
-  border-radius: $button-size/2;
-  position: fixed;
-  bottom: 9%;
-  right: 0%;
-  margin: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: black;
-  font-size: 40px;
-  font-family: "Times new roman";
+    background-color: #bfaae3;
+    width: $button-size;
+    height: $button-size;
+    border-radius: $button-size/2;
+    position: fixed;
+    bottom: 9%;
+    right: 0%;
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    font-size: 40px;
+    font-family: "Times new roman";
 
-  box-shadow: 0 5px 15px rgba(24, 24, 24, 0.5);
-  user-select: none;
-  transition: transform 250ms;
-
+    box-shadow: 0 5px 15px rgba(24, 24, 24, 0.5);
+    user-select: none;
+    transition: transform 250ms;
 }
-.addButton:active{
+.addButton:active {
     transform: scale(0.8);
 }
 
 footer {
-  @include frame(normal);
-  bottom: 0%;
-  background-color: black;
-  border-top: 1px solid gray;
+    @include frame(normal);
+    bottom: 0%;
+    background-color: black;
+    border-top: 1px solid gray;
 }
 
 main {
-  display: flex;
-  flex-direction: column;
-  $margins: $frame-size + 4;
-  margin-top: $margins;
-  margin-bottom: $margins;
-  height: 100%;
-  width: 100%;
-  padding-bottom: 100px;
+    display: flex;
+    flex-direction: column;
+    $margins: $frame-size + 4;
+    margin-top: $margins;
+    margin-bottom: $margins;
+    height: 100%;
+    width: 100%;
+    padding-bottom: 100px;
 }
 
 .thing {
-  background-color: #4f4f4f;
-  margin: 0%;
-  padding: 24px;
-  border-radius: 10px;
-  border-top: 9px solid #CDE9FF;
-  margin: 15px;
-  margin-bottom: 10px;
-  box-shadow: 0 1px 3px rgba(53, 53, 53, 0.5);
-  word-wrap: break-word;
+    background-color: #4f4f4f;
+    margin: 0%;
+    padding: 24px;
+    border-radius: 10px;
+    border-top: 9px solid #cde9ff;
+    margin: 15px;
+    margin-bottom: 10px;
+    box-shadow: 0 1px 3px rgba(53, 53, 53, 0.5);
+    word-wrap: break-word;
+
+    transition: transform 250ms;
 }
 
 .themeChanger {
-    width: 60px;
-    height: 50px;
+    width: 40px;
+    height: 35px;
     background-color: white;
     border-radius: 25px;
     margin-right: 10px;
+}
+
+.valueInput{
+  width: 100%;
+  height: 300px;
+  border-radius: 20px;
+  border-top: 9px solid #cde9ff;
+  background-color: #E1F1FF;
+  
+  position: fixed;
+  top: 100%;
+  transition: transform 0.3s ease-out;
+}
+
+.valueInput:focus {
+  transform: translateY(-190%);
 }
