--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,4 @@
+$main-font: "Asap", sans-serif;
 body {
     display: flex;
     background-color: black;
@@ -5,13 +6,13 @@ body {
     height: 100%;
     margin: 0%;
     width: 100%;
-    font-family: "Asap", sans-serif;
+    font-family: $main-font;
     font-weight: 550;
     user-zoom: none;
 }
 
 $frame-size: 70px;
-@mixin frame($fontSize) {
+@mixin frame($font-size) {
     display: grid;
     position: fixed;
     left: 0%;
@@ -21,7 +22,7 @@ $frame-size: 70px;
     align-items: center;
     justify-content: left;
 
-    font-size: $fontSize;
+    font-size: $font-size;
 }
 header {
     @include frame(25px);
@@ -79,12 +80,13 @@ main {
     padding-bottom: 100px;
 }
 
+$top-border-color: #cde9ff;
 .thing {
     background-color: #4f4f4f;
     margin: 0%;
     padding: 24px;
     border-radius: 10px;
-    border-top: 9px solid #cde9ff;
+    border-top: 9px solid $top-border-color;
     margin: 15px;
     margin-bottom: 10px;
     box-shadow: 0 1px 3px rgba(53, 53, 53, 0.5);
@@ -101,18 +103,78 @@ main {
     margin-right: 10px;
 }
 
+$value-input-background: #E1F1FF;
 .valueInput{
-  width: 100%;
-  height: 300px;
+  width: 97%;
+  margin-left: 1.5%;
+  height: 250px;
+  padding-top: 0%;
   border-radius: 20px;
-  border-top: 9px solid #cde9ff;
-  background-color: #E1F1FF;
+  border-top: 15px solid $top-border-color;
+  background-color: $value-input-background;    
+  box-shadow: 0 1px 13px rgba(53, 53, 53, 0.5);
   
   position: fixed;
   top: 100%;
   transition: transform 0.2s ease-out;
 
-  display: grid;
-  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
+#itemName {
+    border: none;
+    border-bottom: 2px solid black;
+    background-color: $value-input-background;
+    font-size: 24px;
+    height: 30px;
+    width: 300px;
+    margin: 20px;
+    font-family: $main-font;
+}
+#itemName:focus-visible {
+    outline: none;
+}
+
+.itemCostDiv{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-left: 10px;
+}
+#currency{
+    font-size: 20px;
+    color: black;
+    margin-left: 10px;
+    margin-right: 0px;
+    margin-top: 4px;
+    margin-bottom: 2px;
+    border-bottom: 2px solid black;   
+}
+#itemCost {
+    width: 100px;
+    height: fit-content;
+    font-size: 20px;
+    margin: 20px;
+    margin-left: 0px;
+    border: none;
+    border-bottom: 2px solid black;
+    background-color: $value-input-background;
+    font-family: $main-font;
+}
+#itemCost:focus-visible {
+    outline: none;
+}
+
+.valueInputButtons {
+    color: black;
+    margin: 20px;
+    display: flex;
+    flex-direction: row;
+}
+#saveButton, #deleteButton {
+    border: 2px solid white;
+    padding: 3px;
+    margin: 3px;
+}
