--- a/css/style.scss
+++ b/css/style.scss
@@ -84,7 +84,7 @@ main {
 }
 
 $top-border-color: #cde9ff;
-.thing {
+#initialAmount, .thing {
     background-color: #4f4f4f;
     margin: 0%;
     padding: 24px;
@@ -94,8 +94,13 @@ $top-border-color: #cde9ff;
     margin-bottom: 10px;
     box-shadow: 0 1px 3px rgba(53, 53, 53, 0.5);
     word-wrap: break-word;
-
+    
     transition: transform 250ms;
+}
+
+#initialAmount {
+    background-color: #E5F9E0;
+    border-color: #AFEDA4;
 }
 
 .themeChanger {
