Adding functionality for initial balance input

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,22 @@ header p {
   padding-left: 20px;
 }
 
+footer {
+  display: grid;
+  position: fixed;
+  left: 0%;
+  height: 70px;
+  width: 100%;
+  background-color: #212121;
+  align-items: center;
+  justify-content: left;
+  font-size: normal;
+  bottom: 0%;
+  background-color: black;
+  border-top: 1px solid gray;
+  padding-left: 20px;
+}
+
 .addButton {
   background-color: #bfaae3;
   width: 59px;
@@ -53,21 +69,6 @@ header p {
 
 .addButton:active {
   transform: scale(0.8);
-}
-
-footer {
-  display: grid;
-  position: fixed;
-  left: 0%;
-  height: 70px;
-  width: 100%;
-  background-color: #212121;
-  align-items: center;
-  justify-content: left;
-  font-size: normal;
-  bottom: 0%;
-  background-color: black;
-  border-top: 1px solid gray;
 }
 
 main {
@@ -99,6 +100,48 @@ main {
 #initialAmount {
   background-color: #E5F9E0;
   border-color: #AFEDA4;
+  padding: 20px;
+  padding-left: 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+#initialAmount #opener {
+  margin: 0%;
+}
+
+#initialAmount #saveButton1 {
+  font-size: 20px;
+  height: fit-content;
+  margin-top: 20px;
+  padding: 3px;
+  display: flex;
+  align-items: center;
+  border: 3px solid white;
+}
+
+.initialAmountBox {
+  display: flex;
+  flex-direction: row;
+}
+
+.initialAmountBox p {
+  font-size: 20px;
+  border-bottom: 2px solid black;
+}
+
+#amountElement {
+  border: none;
+  border-bottom: 2px solid black;
+  outline: none;
+  background-color: transparent;
+  font-size: 20px;
+  height: 20px;
+  width: 130px;
+  margin: 20px;
+  margin-left: 0%;
+  font-family: "Asap", sans-serif;
 }
 
 .themeChanger {
@@ -116,6 +159,7 @@ main {
   display: grid;
   justify-content: center;
   align-items: center;
+  z-index: -1;
 }
 
 .valueInput {
