Fixed css and js bugs with the balance input field

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   display: grid;
   background-color: black;
@@ -45,6 +46,16 @@ footer {
   background-color: black;
   border-top: 1px solid gray;
   padding-left: 20px;
+  display: flex;
+  flex-direction: row;
+}
+
+footer p {
+  font-size: 27px;
+}
+
+footer p::before {
+  content: " ₹2000";
 }
 
 .addButton {
