--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 body {
   display: grid;
   background-color: black;
@@ -54,10 +53,6 @@ footer p {
   font-size: 27px;
 }
 
-footer p::before {
-  content: " ₹2000";
-}
-
 .addButton {
   background-color: #bfaae3;
   width: 59px;
@@ -111,7 +106,7 @@ main {
 #initialAmount {
   background-color: #E5F9E0;
   border-color: #AFEDA4;
-  padding: 20px;
+  padding: 15px;
   padding-left: 15px;
   display: flex;
   flex-direction: row;
@@ -119,7 +114,14 @@ main {
 }
 
 #initialAmount #opener {
+  display: flex;
   margin: 0%;
+}
+
+#initialAmount #opener p {
+  display: grid;
+  align-items: center;
+  justify-content: center;
 }
 
 #initialAmount #saveButton1 {
@@ -139,6 +141,9 @@ main {
 
 .initialAmountBox p {
   font-size: 20px;
+  padding-bottom: 0px;
+  margin-top: 0%;
+  padding-top: 19px;
   border-bottom: 2px solid black;
 }
 
