--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ footer p {
   color: black;
   font-size: 40px;
   font-family: "Times new roman";
+  cursor: pointer;
   box-shadow: 0 5px 15px rgba(24, 24, 24, 0.5);
   user-select: none;
   transition: transform 250ms;
@@ -100,6 +101,7 @@ main {
   margin-bottom: 10px;
   box-shadow: 0 1px 3px rgba(53, 53, 53, 0.5);
   word-wrap: break-word;
+  cursor: pointer;
   transition: transform 250ms;
 }
 
@@ -108,6 +110,7 @@ main {
   border-color: #AFEDA4;
   padding: 15px;
   padding-left: 15px;
+  cursor: default;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -116,6 +119,7 @@ main {
 #initialAmount #opener {
   display: flex;
   margin: 0%;
+  cursor: pointer;
 }
 
 #initialAmount #opener p {
@@ -132,6 +136,7 @@ main {
   display: flex;
   align-items: center;
   border: 3px solid white;
+  cursor: pointer;
 }
 
 .initialAmountBox {
@@ -166,6 +171,7 @@ main {
   background-color: white;
   border-radius: 25px;
   margin-right: 10px;
+  cursor: pointer;
 }
 
 .container {
@@ -254,6 +260,7 @@ main {
   border: 2px solid white;
   padding: 3px;
   margin: 3px;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=style.css.map */
