--- a/css/style.scss
+++ b/css/style.scss
@@ -114,6 +114,18 @@ $top-border-color: #cde9ff;
     transition: transform 250ms;
 }
 
+.thing {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.thing p {
+    margin: 0%;
+    padding: 0%;
+    word-wrap: break-word;
+}
+
 $initialAmountColor: #E5F9E0;
 #initialAmount {
     background-color: $initialAmountColor;
